# simple-logger

./: CMakeLists.txt
include/simple-logger/: logger.hpp  logger_option.hpp  message_queue.hpp  timestamp.hpp
src/: logger.cpp
test/: test_logger.cpp  test_messagequeue.cpp  test_timestamp.cpp
